Java FX dependencies added