@@ -1,7 +1,7 @@
+import com.codingfeline.buildkonfig.compiler.FieldSpec
 import org.jetbrains.compose.desktop.application.dsl.TargetFormat
 import org.jetbrains.kotlin.gradle.dsl.JvmTarget
-import com.codingfeline.buildkonfig.compiler.FieldSpec
-import java.util.*
+import java.util.Properties
 
 plugins {
     alias(libs.plugins.kotlinMultiplatform)
@@ -10,10 +10,11 @@ plugins {
     alias(libs.plugins.composeCompiler)
     alias(libs.plugins.kotlin.serialization)
     alias(libs.plugins.buildkonfig)
+    id("com.vanniktech.maven.publish") version "0.29.0"
+    id("com.google.osdetector") version "1.7.3"
 }
 
 kotlin {
-
     compilerOptions {
         freeCompilerArgs.add("-Xexpect-actual-classes")
     }
@@ -23,12 +24,12 @@ kotlin {
             jvmTarget.set(JvmTarget.JVM_22)
         }
     }
-    
+
     jvm("desktop")
-    
+
     sourceSets {
         val desktopMain by getting
-        
+
         androidMain.dependencies {
             implementation(compose.preview)
             implementation(libs.androidx.activity.compose)
@@ -61,12 +62,25 @@ kotlin {
 
             implementation(libs.bundles.ktor)
             implementation(libs.bundles.coil)
-
         }
+
         desktopMain.dependencies {
             implementation(compose.desktop.currentOs)
             implementation(libs.kotlinx.coroutines.swing)
-            implementation(libs.vlcj)
+            val fxSuffix = when (osdetector.classifier) {
+                "linux-x86_64" -> "linux"
+                "linux-aarch_64" -> "linux-aarch64"
+                "windows-x86_64" -> "win"
+                "osx-x86_64" -> "mac"
+                "osx-aarch_64" -> "mac-aarch64"
+                else -> throw IllegalStateException("Unknown OS: ${osdetector.classifier}")
+            }
+            implementation("org.openjfx:javafx-base:19:${fxSuffix}")
+            implementation("org.openjfx:javafx-graphics:19:${fxSuffix}")
+            implementation("org.openjfx:javafx-controls:19:${fxSuffix}")
+            implementation("org.openjfx:javafx-swing:19:${fxSuffix}")
+            implementation("org.openjfx:javafx-web:19:${fxSuffix}")
+            implementation("org.openjfx:javafx-media:19:${fxSuffix}")
         }
     }
 }
@@ -129,4 +143,18 @@ buildkonfig {
             "GEMINI_API_KEY", localProperties["GEMINI_API_KEY"]?.toString() ?: "",
         )
     }
+}
+
+task("testClasses") {}
+tasks.withType<JavaExec> {
+    jvmArgs = listOf(
+        "--add-modules",
+        "javafx.controls,javafx.fxml",
+        "--add-opens",
+        "javafx.graphics/javafx.scene=ALL-UNNAMED",
+        "--add-opens",
+        "javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED",
+        "--add-opens",
+        "javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED"
+    )
 }
